@@ -69,6 +69,7 @@ pidgin-sipe (1.13.1-1) unstable; urgency=low
   * Add Vcs-* fields to debian/control.
   * Add Jakub Adam to Uploaders.
   * Updated debian/copyright and converted to machine-readable format.
+  * Fix debian/rules clean target.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 11 May 2012 14:18:15 +0200
 
